# MAGPIE

./: .gitignore  .gitmodules  00_robot-test.ipynb  10_BT-test.ipynb  20_gears-demo-BT.ipynb  BaselinePlanner.py  Confusion.py  LICENSE  Motor_Code.py  README.md  Requirements.md  Requirements.txt  SymBeliefPlot.py  TaskPlanner.py  env.yml  env_config.py  grabTest.ipynb  grab_test.ipynb  move_ur5.ipynb  openCM.rules  open_grasp.ipynb  orient_gripper_and_grasp.ipynb  parts.md  perception.py  poses.py  pyproject.toml  requirements.txt  test_gripper.ipynb  utils.py
30_pdls_test_01/: test_01.py
40_blocks_detect/: 42_Get-PCD-Color.ipynb  43_YOLO.ipynb  44_Segment-Stream.ipynb  Block.py  Perception.py  domain.pddl  stream.pddl
50_pdls_RYB_blocks/: 51_detect.py  52_segment.py  53_grasp.py  Block.py  Perception.py  domain.pddl  stream.pddl
CAD/: cover.SLDPRT  finger.SLDPRT
Task_Planner/: DEV_PLAN.md
data/: Sym-Confidence_07-31-2024_14-50-36.txt  Sym-Confidence_08-01-2024_10-44-14.txt  Sym-Confidence_08-01-2024_13-09-18.txt  Sym-Confidence_08-28-2024_18-40-10.txt
datasets/: combine_logs.ipynb  dataset_info.json  dp_log_plot.ipynb  features.json
deprecated/: UR5_Interface.py  grab_test.py
graphics/: dh_graphics.py  dh_mp.py  draw_beliefs.py  gl_graphics.py  homog_utils.py  zb_viz_test.py
magpie/: Ax12.py  BT.py  Motor_Code.py  ax12.py  axisAngleNotes.txt  grasp.py  gripper.py  motor_code.py  poses.py  realsense_wrapper.py  ur5.py  utils.py
notebooks/: bb_to_pc.ipynb  bb_to_pc_v4.ipynb  owl-vit_sam_test.ipynb
task_planning/: DEV_PLAN.md  actions.py  belief.py  (+3 more)
(+1254 files in other folders)
